Modified css for minor styling issues

--- a/Components/Controls/Todo.razor
+++ b/Components/Controls/Todo.razor
@@ -6,6 +6,7 @@
                 type="text"
                 @oninput="OnTodoEditingInput"
                 @onkeypress="OnTodoEditingItemKeyPress"
+                @onblur="OnEditInputBlur"
                 value="@Item.Title"
             />
         }
