--- a/wwwroot/styles/styles.css
+++ b/wwwroot/styles/styles.css
@@ -78,7 +78,6 @@ h1{
     align-items: center;
     justify-content: space-between;
     margin-left: 10px;
-
 }
 
     .completed {
@@ -148,6 +147,7 @@ h1{
 
 .filter{
     padding: 5px;
+    cursor: pointer;
 }
 
     .filter:hover{
