--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -22,6 +22,7 @@
 </div>
 
 @code {
+    //Dependency injection to interact with local storage
     [Inject]
     public TodoStorageService TodoStorageService { get; set; } = default!;
 
@@ -29,6 +30,7 @@
 
     protected string filter = "All";
     
+    //life cycle method
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if(firstRender)
@@ -38,6 +40,7 @@
         }
     }
 
+    //event handlers 
     protected async void OnTodoListChanged(TodoItemChangedEventArgs e)
     {
         await TodoStorageService.SaveTodosAsync(TodoItems);
