--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -9,4 +9,5 @@
 @using BlazorTodoApp
 @using BlazorTodoApp.Components
 @using BlazorTodoApp.Components.Controls
+@using BlazorTodoApp.Components.Templates
 @using blazortodoapp.Models
