--- a/wwwroot/styles/styles.css
+++ b/wwwroot/styles/styles.css
@@ -154,3 +154,22 @@ h1{
         border: 1px solid #b83f45;
         border-radius: 5px;
     }
+
+/* for second template */
+/* .todo-v2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.todo-title {
+    flex-grow: 1;
+}
+
+.todo-delete {
+    color: #d32f2f;
+    cursor: pointer;
+} */
+    
