Attempting to implement Components template by establishing a Base template and two 2 components for it. Unfinished. Will continue soon.

--- a/Components/App.razor
+++ b/Components/App.razor
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="/dist/app.css" />
-    <link rel="stylesheet" href="BlazorTodoApp.styles.css" />
+    @* <link rel="stylesheet" href="BlazorTodoApp.styles.css" /> *@
     <link rel="stylesheet" href="/styles/styles.css" />
     <link rel="icon" type="image/png" href="note.icon.png" />
     <HeadOutlet />
 </head>
 
-<body>
+<body class="bg-pink">
     <Routes />
     <script src="_framework/blazor.web.js"></script>
-    @* <script src="/dist/app.js"></script> *@
+    <script src="/dist/app.js"></script>
 </body>
 
 </html>
