--- a/Components/Controls/Todo.razor
+++ b/Components/Controls/Todo.razor
@@ -1,4 +1,4 @@
-<div class="todo">
+@* <div class="todo">
     @if(Item.IsEditing)
         {
             <input
@@ -28,4 +28,4 @@
             </li>
         }
 </div>
-    
+     *@
