--- a/Components/Controls/TodoList.razor
+++ b/Components/Controls/TodoList.razor
@@ -1,5 +1,5 @@
 <main class="main">
-    <ul class="todo-list">
+    <ul class="text-gray-600 text-left">
         @if (ItemTemplate != null)
         {
             @foreach (var pair in FilterItems(Items))
