--- a/Components/App.razor
+++ b/Components/App.razor
@@ -12,7 +12,7 @@
     <HeadOutlet />
 </head>
 
-<body>
+<body class="font-light bg-gray-100 font-sans p-6 flex justify-center">
     <Routes />
     <script src="_framework/blazor.web.js"></script>
     @* <script src="/dist/app.js"></script> *@
