--- a/Components/Controls/TodoFooter.razor
+++ b/Components/Controls/TodoFooter.razor
@@ -1,13 +1,31 @@
 @if (Items != null && Items.Count > 0)
 {
-    <footer class="info">
-        <span class="todo-count">@GetUncompletedItemsCount() item left!</span>
-        <ul class="filters">
-            <li class="filter" @onclick="@(() => HandleFilterClick("All"))">All</li>
-            <li class="filter" @onclick="@(() => HandleFilterClick("Active"))">Active</li>
-            <li class="filter" @onclick="@(() => HandleFilterClick("Completed"))">Completed</li>
+    <footer class="text-xs flex justify-between items-center text-base font-light h-[50px] border-t border-[rgb(199, 197, 197)] text-[rgb(79, 78, 78)]">
+        <span class="todo-count ml-7">
+            @GetUncompletedItemsCount() item left!
+        </span>
+        <ul class="w-36 flex justify-between">
+            <li
+                class="filter p-2 cursor-pointer hover:border hover:border-red-800 hover:border-opacity-100 hover:rounded"
+                @onclick="@(() => HandleFilterClick("All"))">
+                All
+            </li>
+            <li
+                class="filter p-2 cursor-pointer hover:border hover:border-red-800 hover:border-opacity-100 hover:rounded"
+                @onclick="@(() => HandleFilterClick("Active"))">
+                Active
+            </li>
+            <li
+                class="filter p-2 cursor-pointer hover:border hover:border-red-800 hover:border-opacity-100 hover:rounded"
+                @onclick="@(() => HandleFilterClick("Completed"))">
+                Completed
+            </li>
         </ul>
-        <button class="clear-completed" @onclick="ClearCompletedItems">Clear completed</button>
+        <button
+            class="mr-7 hover:underline"
+            @onclick="ClearCompletedItems">
+            Clear completed
+        </button>
     </footer>
 }
 
