--- a/Components/Controls/TodoInput.razor
+++ b/Components/Controls/TodoInput.razor
@@ -1,9 +1,10 @@
-<input
-    class="input-field"
-    type="text"
-    placeholder="What needs to be done?"
-    @onkeypress="OnTodoInputKeyPress"
-    @bind-value="CurrentTodo"  
-    @bind-value:event="oninput"      
->
-
+<div class="flex h-20 relative">
+    <input
+        class="input-field flex-1 outline-none text-left pl-16 placeholder-italic text-[25px] font-light focus:shadow-outline-red"
+        type="text"
+        placeholder="What needs to be done?"
+        @onkeypress="OnTodoInputKeyPress"
+        @bind-value="CurrentTodo"
+        @bind-value:event="oninput"
+    />
+</div>
