--- a/Components/Controls/TodoInput.razor
+++ b/Components/Controls/TodoInput.razor
@@ -1,6 +1,6 @@
-<div class="flex h-20 relative">
+<div class="flex h-16 relative">
     <input
-        class="input-field flex-1 outline-none text-left pl-16 placeholder-italic text-[25px] font-light focus:shadow-outline-red"
+        class="input-field flex-1 outline-none text-left pl-16 placeholder-italic text-[24px] font-extralight focus:shadow-outline-red"
         type="text"
         placeholder="What needs to be done?"
         @onkeypress="OnTodoInputKeyPress"
