refactoring source code

--- a/Components/Controls/TodoInput.razor
+++ b/Components/Controls/TodoInput.razor
@@ -5,6 +5,5 @@
         placeholder="What needs to be done?"
         @onkeypress="OnTodoInputKeyPress"
         @bind-value="CurrentTodo"
-        @bind-value:event="oninput"
-    />
+        @bind-value:event="oninput" />
 </div>
